manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vj-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vj-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vj-app-stable # Rollouts will manage the weight between stable/canary
            port:
              number: 80
